# TinyParse

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  test.tinyparse
include/: .rule.hpp.swp  FSM.h  debug.h  generator.h  parser.h  parser.hpp  rule.h  rule.hpp  tinylex_intergration.h  tinylex_intergration_lexer.h
include/generator/: generator.hpp  generator_cpp.hpp
source/: FSM.c  debug.c  generator_c.c  lex.tinylex  parser.c  parser.cpp  rule.c  rule.cpp  tinylex_intergration.c  tinylex_intergration.tinylex  tinyparse.c  tinyparse.cpp
source/generator/: generator.cpp  generator_cpp.cpp
templates/: template.c
templates/c/: c_header.txt  c_implement.txt
test_project/: Makefile  lexer.h  parser.h  test.c  test.tinylex  test.txt  test_project  tinyparse.h
tests/: run.sh  test.c
tests/combine_rules/: combine_rules.tinylex  combine_rules.tinyparse  expected.txt  transverse.c
tests/keywords/: expected.txt  keywords.tinyparse  test.txt
tests/label/: expected.txt  label.tinyparse  test.txt  transverse.c
tests/label_optional/: expected.txt  label_optional.tinyparse  test.txt  transverse.c
tests/optional/: optional.tinyparse  test.txt  transverse.c
tests/or/: expected.txt  or.tinyparse  run.sh  transverse.c
tests/sub_node/: expected.txt  sub_node.tinyparse  test.txt  transverse.c
tests/sub_node_if/: expected.txt  sub_node_if.tinyparse  transverse.c
tests/sub_node_recursive/: expected.txt  sub_node_recursive.tinyparse  transverse.c
tinyparse/cpp/: cpp_header.txt
